2018-07-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ExtractTokensBetweenPushPop):
	ExtractTokensBetweenPushPop() needs to always return a valid
	pointer into the primitive string.  Fixes oss-fuzz 9511
	"graphicsmagick/graphicsmagick_coder_MVG_fuzzer: Null-dereference
	READ in DrawImage". (Credit to OSS-Fuzz)
	(DrawPolygonPrimitive): Fix leak of polygon set when object is
	completely outside image.  Fixes oss-fuzz 9513
	"graphicsmagick/graphicsmagick_coder_MVG_fuzzer: Direct-leak in
	AllocateThreadViewDataSet". (Credit to OSS-Fuzz)

2018-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (FileToBlob): Use confirm access APIs to verify
	that read access to this path is allowed by policy.  Check that
	file is a regular file before proceeding to open and read from it.

	* coders/mvg.c (ReadMVGImage): Don't allow MVG files to side-load
	a file as the drawing primitive using '@' syntax.  Fixes oss-fuzz
	9494 "graphicsmagick/coder_MVG_fuzzer: Sanitizer CHECK failure in
	"((0)) != (0)" (0x0, 0x0)". (Credit to OSS-Fuzz)

2018-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mvg.c (ReadMVGImage): Don't assume that in-memory MVG
	blob is a null-terminated C string. Fixes oss-fuzz 9469
	"graphicsmagick/coder_MVG_fuzzer: Heap-buffer-overflow in
	AllocateString". (Credit to OSS-Fuzz)

2018-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Detect EOF when reading using
	ReadBlobZC() and avoid subsequent heap read overflow.  Fixes
	oss-fuzz 9357 "graphicsmagick/coder_MIFF_fuzzer:
	Heap-buffer-overflow in ImportRGBQuantumType". (Credit to
	OSS-Fuzz)

2018-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh (CFLAGS): Try disabling SIMD
	instructions in libjpeg-turbo build.

2018-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Free png_pixels as soon as
	possible.  This might help with oss-fuzz 9334