@@ -38,6 +38,13 @@
 <p>2018-07-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_cache.c (SetNexus): For requests one pixel tall,
+SetNexus() was wrongly using pixels in-core rather than using a
+staging area for the case where the nexus rows extend beyond the
+image raster boundary, leading to heap overflow.  This can happen
+when virtual pixels outside the image bounds are accessed.  Fixes
+oss-fuzz 9512 &quot;graphicsmagick/graphicsmagick_coder_MVG_fuzzer:
+Heap-buffer-overflow in AcquireCacheNexus&quot;. (Credit to OSS-Fuzz)</li>
 <li>magick/render.c (ExtractTokensBetweenPushPop):
 ExtractTokensBetweenPushPop() needs to always return a valid
 pointer into the primitive string.  Fixes oss-fuzz 9511
